fix: margin-bottom 100px for places section so that it doesn't overlap footer

--- a/web_static/styles/8-places.css
+++ b/web_static/styles/8-places.css
@@ -1,6 +1,7 @@
 .places {
   width: 100%;
   margin-left: 25px;
+  margin-bottom: 100px;
 }
 .places h1 {
   font-size: 30px
